Fixed footer placement and fixed visited links being hard to see

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,10 @@
    background-color: hsl(0, 0%, 29%);
  }
 
+ .page {
+   min-height: 75vh;
+ }
+
  .round-image {
 	 border-radius: 50%;
 }
@@ -33,12 +37,15 @@ a {
   color: hsl(348, 100%, 61%);
 }
 
+a:visited {
+  color: hsl(348, 100%, 61%);
+}
+
 a:hover {
   background-color: black;
   color:hsl(348, 100%, 61%);
 }
 
 .footer {
-  // position: relative;
   bottom: 0;
 }
